import { Operation, Variable, number } from "./Operation, Variable, number";
import { UnitDistanceEnum, UnitMassEnum, UnitMonetaryEnum, UnitPersonEnum, UnitTimeEnum, string } from "./UnitDistanceEnum, UnitMassEnum, UnitMonetaryEnum, UnitPersonEnum, UnitTimeEnum, string";
import { UnitDimensionEnum } from "./UnitDimensionEnum";


export class Amount {
  quantity: Operation, Variable, number;
  unit: UnitDistanceEnum, UnitMassEnum, UnitMonetaryEnum, UnitPersonEnum, UnitTimeEnum, string;
  unitDimension: UnitDimensionEnum;


}
