import { List } from "./List";


export class ChainCompositionOr {
  operands: List;


}
