export enum ChainOperatorEnum {
  wildcard,
  not,
}
