import { List } from "./List";


export class InsurancePolicy {
  coverages: List;
  riskObjects: List;
  specifics: List;


}
