export enum MultiplierOccurrenceEnum {
  perClaim,
  perLine,
  perIncident,
}
