export enum MultiplierPersonEnum {
  perPerson,
  perPassenger,
  perEmployee,
  perLoneTraveler,
}
