export enum MultiplierTimeEnum {
  perMinutes,
  perHour,
  perDay,
  perMonth,
  perCalendarMonth,
  perYear,
  perPeriodOfInsurance,
}
