

export class Number {
  value: number;


}
