import { Operation, Variable, number } from "./Operation, Variable, number";
import { OperandEnum } from "./OperandEnum";


export class Operation {
  leftHand: Operation, Variable, number;
  operand: OperandEnum;
  rightHand: Operation, Variable, number;


}
