

export class Situation {
  id: string;
  event: string;
  location: string;
  period: string;


}
