export enum UnitPersonEnum {
  person,
  passenger,
  driver,
  policyholder,
}
