export enum UnitTimeEnum {
  second,
  millisecond,
  minute,
  hour,
  day,
  week,
  month,
  year,
  night,
}
