

export class Variable {
  name: string;


}
