import { Amount } from "./Amount";


export class Vehicle extends Entity {
  productionYear: Amount;
  age: Amount;
  length: Amount;
  weight: Amount;
  height: Amount;
  width: Amount;


}
