import { ChainOperatorEnum } from "./ChainOperatorEnum";


export class ChainOperator {
  type: ChainOperatorEnum;


}
