import { List } from "./List";
import { RiskChain } from "./RiskChain";


export class Coverage {
  payouts: List;
  riskChain: RiskChain;
  riskObjects: List;
  text: string;


}
