export enum OperandEnum {
  addition,
  subtraction,
}
