export enum PayoutTypeEnum {
  Limit,
  Excess,
  Deductible,
  Franchise,
  StrictLimit,
  Exclusion,
  CoPayment,
  CoInsurance,
}
