

export class Relation {
  impacterId: string;
  impactedId: string;
  verb: string;


}
