import { List } from "./List";


export class RiskChain {
  chain: List;
  actors: List;
  relations: List;


}
