

export class RiskObject {
  id: string;


}
