import { Amount } from "./Amount";


export class Specific {
  name: string;
  value: Amount;


}
