export enum UnitDimensionEnum {
  monetary,
  time,
  distance,
  mass,
  person,
}
