export enum UnitDistanceEnum {
  meter,
  decimeter,
  centimeter,
  millimeter,
  decameter,
  hectometer,
  kilometer,
  yard,
  inch,
  miles,
  nauticalMiles,
  foot,
}
