export enum UnitMassEnum {
  kilogram,
  gram,
  ton,
  pound,
}
