classDiagram
  Amount -- Operation, Variable, number
  Amount -- UnitDistanceEnum, UnitMassEnum, UnitMonetaryEnum, UnitPersonEnum, UnitTimeEnum, string
  Amount -- UnitDimensionEnum


class Amount {

  Operation, Variable, number quantity
  UnitDistanceEnum, UnitMassEnum, UnitMonetaryEnum, UnitPersonEnum, UnitTimeEnum, string unit
  UnitDimensionEnum unitDimension

 }

  ChainCompositionOr -- RiskChain


class ChainCompositionOr {

  RiskChain[] operands

 }

  ChainOperator -- ChainOperatorEnum


class ChainOperator {

  ChainOperatorEnum type

 }

class ChainOperatorEnum {
<<enumeration>>
  o wildcard
  o not
 }

  Coverage -- InsurancePayout
  Coverage -- RiskChain
  Coverage -- RiskObject


class Coverage {

  InsurancePayout[] payouts
  RiskChain riskChain
  RiskObject[] riskObjects
  string text

 }



class RiskObject {
<<abstract>>

  string id

 }

  InsurancePayout -- PayoutTypeEnum
  InsurancePayout -- Amount
  InsurancePayout -- Multiplier
  InsurancePayout -- RiskChain


class InsurancePayout {

  PayoutTypeEnum payoutType
  Amount[] amount
  Amount[] minimalAmount
  Multiplier per
  RiskChain for
  boolean impactOtherConsumption

 }

  InsurancePolicy -- Coverage
  InsurancePolicy -- RiskObject
  InsurancePolicy -- Specific


class InsurancePolicy {

  Coverage[] coverages
  RiskObject[] riskObjects
  Specific[] specifics

 }

  Multiplier -- MultiplierTimeEnum
  Multiplier -- MultiplierPersonEnum
  Multiplier -- MultiplierOccurrenceEnum
  Multiplier -- MultiplierInsuredObjectEnum


class Multiplier {

  MultiplierTimeEnum time
  MultiplierPersonEnum person
  MultiplierOccurrenceEnum occurrence
  MultiplierInsuredObjectEnum insuredObject
  string[] other

 }

class MultiplierInsuredObjectEnum {
<<enumeration>>
  o perCar
 }

class MultiplierOccurrenceEnum {
<<enumeration>>
  o perClaim
  o perLine
  o perIncident
 }

class MultiplierPersonEnum {
<<enumeration>>
  o perPerson
  o perPassenger
  o perEmployee
  o perLoneTraveler
 }

class MultiplierTimeEnum {
<<enumeration>>
  o perMinutes
  o perHour
  o perDay
  o perMonth
  o . . . 3 more values
 }



class Number {

  number value

 }

class OperandEnum {
<<enumeration>>
  o addition
  o subtraction
 }

  Operation -- Operation, Variable, number
  Operation -- OperandEnum


class Operation {

  Operation, Variable, number leftHand
  OperandEnum operand
  Operation, Variable, number rightHand

 }

class PayoutTypeEnum {
<<enumeration>>
  o Limit
  o Excess
  o Deductible
  o Franchise
  o . . . 4 more values
 }



class Relation {

  string impacterId
  string impactedId
  string verb

 }

  RiskChain -- ChainCompositionOr, ChainOperator, Situation
  RiskChain -- RiskObject
  RiskChain -- Relation


class RiskChain {

  ChainCompositionOr, ChainOperator, Situation[] chain
  RiskObject[] actors
  Relation[] relations

 }



class Situation {

  string id
  string event
  string location
  string period

 }

  Specific -- Amount


class Specific {

  string name
  Amount value

 }

class UnitDimensionEnum {
<<enumeration>>
  o monetary
  o time
  o distance
  o mass
  o . . . 1 more values
 }

class UnitDistanceEnum {
<<enumeration>>
  o meter
  o decimeter
  o centimeter
  o millimeter
  o . . . 8 more values
 }

class UnitMassEnum {
<<enumeration>>
  o kilogram
  o gram
  o ton
  o pound
 }

class UnitMonetaryEnum {
<<enumeration>>
  o AED
  o AFN
  o ALL
  o AMD
  o . . . 177 more values
 }

class UnitPersonEnum {
<<enumeration>>
  o person
  o passenger
  o driver
  o policyholder
 }

class UnitTimeEnum {
<<enumeration>>
  o second
  o millisecond
  o minute
  o hour
  o . . . 5 more values
 }



class Variable {

  string name

 }

  Person -- PersonRelationToPolicyHolderEnum


class Person {

  PersonRelationToPolicyHolderEnum relationToPolicyHolder
  string firstName
  string lastName
  number age

 }

class PersonRelationToPolicyHolderEnum {
<<enumeration>>
  o aunt
  o bother
  o brotherInLaw
  o cousin
  o . . . 28 more values
 }

  Vehicle -- Amount


class Vehicle {

  Amount productionYear
  Amount age
  Amount length
  Amount weight
  Amount height
  Amount width

 }

undefined
undefined
undefined
undefined
undefined
undefined